8243323: Shenandoah: Recycle immediate garbage before concurrent class unloading

Reviewed-by: shade